--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,5 +1,8 @@
 <ion-header [translucent]="true">
   <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-menu-button autoHide="false"></ion-menu-button>
+    </ion-buttons>
     <ion-title>
       Gestion de Stock
     </ion-title>
@@ -18,10 +21,10 @@
         <ion-label>{{p.name}}</ion-label>
         </ion-button>
         <ion-button [routerLink]="['/update-product', p.reference]">
-          <ion-icon name="pencil" slot="end" color="warning" fill="outline"></ion-icon>
+          <ion-icon name="pencil" style="zoom:1.5" slot="end" color="warning" fill="outline" ></ion-icon>
         </ion-button>
-        <ion-button [routerLink]="['/delete-product', p.reference]">
-          <ion-icon name="close" slot="end" color="danger" fill="outline"></ion-icon>
+        <ion-button (click)="remove(task.id)">
+          <ion-icon name="close" style="zoom:1.5" slot="end" color="danger" fill="outline"></ion-icon>
         </ion-button>
       </ion-item>
     </ion-list>
