--- a/src/app/meteo/meteo.page.html
+++ b/src/app/meteo/meteo.page.html
@@ -1,5 +1,8 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-menu-button autoHide="false"></ion-menu-button>
+    </ion-buttons>
     <ion-title>meteo</ion-title>
   </ion-toolbar>
 </ion-header>
