--- a/src/app/new-product/new-product.page.html
+++ b/src/app/new-product/new-product.page.html
@@ -1,5 +1,8 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-menu-button autoHide="false"></ion-menu-button>
+    </ion-buttons>
     <ion-title>Create new Product</ion-title>
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
@@ -8,7 +11,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="ion-padding" >
   <form #f="ngForm" (ngSubmit)="createProduct(f.value)">
     <ion-item>
       <ion-input name="name" type="text" ngModel placeholder="Product Name"></ion-input>
